SERVER-11904 Preallocated files are sparse in FreeBSD/UFS. Do not always assume FreeBSD is running on ZFS and zero-fill the file at allocation time. This matches the behaviour of mongod on Linux for non copy-on-write filesystem, e.g. UFS, and helps preventing disk fragmentation.